--- a/Vistas/Home.html
+++ b/Vistas/Home.html
@@ -20,7 +20,7 @@
 		  		<br><br>
 		  		<button type="button" onclick="location.href='CrearOperacionEgreso.html';"style="width: 260px; height: 50px; position: relative; left:62px">CargarOperacionEgreso </button> &nbsp; &nbsp;
 
-		  		<button type="button" onclick="location.href='Eventos.html';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarEgresoPresupuestoACategoria </button>
+		  		<button type="button" onclick="location.href='asocEgresoPresupuestoACategoria.html';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarEgresoPresupuestoACategoria </button>
 		  		<br><br>
 		  		<button type="button" onclick="location.href='Eventos.html';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarIngresosEgresos </button> &nbsp; &nbsp;
 
