--- a/Vistas/Home.html
+++ b/Vistas/Home.html
@@ -22,7 +22,7 @@
 
 		  		<button type="button" onclick="location.href='asocEgresoPresupuestoACategoria.html';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarEgresoPresupuestoACategoria </button>
 		  		<br><br>
-		  		<button type="button" onclick="location.href='Eventos.html';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarIngresosEgresos </button> &nbsp; &nbsp;
+		  		<button type="button" onclick="location.href='asocIngresoEgreso.html';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarIngresosEgresos </button> &nbsp; &nbsp;
 
 		  		<button type="button" onclick="location.href='Eventos.html';"style="width: 260px; height: 50px; position: relative; left:62px">Visualizar IngresosEgresos </button>
 		  		<br><br>
