--- a/Vistas/Home.html
+++ b/Vistas/Home.html
@@ -24,7 +24,7 @@
 		  		<br><br>
 		  		<button type="button" onclick="location.href='asocIngresoEgreso.html';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarIngresosEgresos </button> &nbsp; &nbsp;
 
-		  		<button type="button" onclick="location.href='Eventos.html';"style="width: 260px; height: 50px; position: relative; left:62px">Visualizar IngresosEgresos </button>
+		  		<button type="button" onclick="location.href='visualizacionIngresoEgresoPorCat.html';"style="width: 260px; height: 50px; position: relative; left:62px">Visualizar IngresosEgresos </button>
 		  		<br><br>
 		  		<button type="button" onclick="location.href='BandejaDeMensajes.html';"style="width: 260px; height: 50px; position: relative; left:200px">BandejaDeMensajes </button> &nbsp; &nbsp;
 	  	</div>
