--- a/Vistas/Home.html
+++ b/Vistas/Home.html
@@ -18,7 +18,7 @@
 
 	<h1> &nbsp; Bienvenido [User]!</h1>
 		  		<br><br>
-		  		<button type="button" onclick="location.href='CrearOperacionEgreso.html';"style="width: 260px; height: 50px; position: relative; left:62px">CargarOperacionEgreso </button> &nbsp; &nbsp;
+		  		<button type="button" onclick="location.href='crearOperacionEgreso.html';"style="width: 260px; height: 50px; position: relative; left:62px">CargarOperacionEgreso </button> &nbsp; &nbsp;
 
 		  		<button type="button" onclick="location.href='ingreso.html';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarEgresoPresupuestoACategoria </button>
 		  		<br><br>
